gccida/g0/output_asm_operand_names
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_asm_operand_names/src/final.c:3536:14: error: expected identifier or '('
 struct expr = get_mem_expr_from_op( operands[oporder[i]], &addressp); 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_asm_operand_names/src/final.c:3537:7: error: expected expression
if (  struct expr ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_asm_operand_names/src/final.c:3542:22: error: use of undeclared identifier 'unk_774FF3'
v3 = ( const char *)&unk_774FF3; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_asm_operand_names/src/final.c:3544:22: error: use of undeclared identifier 'unk_774FF3'
v4 = ( const char *)&unk_774FF3; 
                     ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_asm_operand_names/src/obj/final.o] Error 1
